--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Extract archives (7z, zip, bz2, gz,...) using system executables",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec",
-    "coverage": "nyc --all --reporter=html npm test"
+    "test": "nyc --reporter=html --reporter=text --reporter=cobertura mocha",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/mborne/node-extract#readme",
   "devDependencies": {
     "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "mocha": "^10.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0"
   },
   "dependencies": {
